--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.18.0",
     "mongoose": "^8.16.4",
     "nodemailer": "^7.0.5"
   }
